--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
-<hello name="{{ name }}"></hello>
-<one-app></one-app>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<h1>Here we can put our components</h1>
+<component-1></component-1>
 
 
 
