--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <h1>Here we can put our components</h1>
+
 <component-1></component-1>
+<div class="component-2"></div>
+<div component-3></div>
+
 
 
 
