--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
-<h1>Here we can put our components</h1>
+<!-- import components -->
+<div app-box-one></div>
+<app-box-two></app-box-two>
+<div class="app-box-three"></div>
 
-<component-1></component-1>
-<div class="component-2"></div>
-<div component-3></div>
+<app-interpolation></app-interpolation>
 
+<app-binding-property></app-binding-property>
+
+<app-class-binding></app-class-binding>
 
 
 
