--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,20 @@
 
 <app-class-binding></app-class-binding>
 
+<app-style-binding></app-style-binding>
+
+<app-event-binding></app-event-binding>
+
+<app-template-reference></app-template-reference>
+
+<app-two-way-binding></app-two-way-binding>
+
+<app-ng-if-directives></app-ng-if-directives>
+
+<app-ng-switch-directives></app-ng-switch-directives>
+
+<app-ng-for-directives></app-ng-for-directives>
+
+<app-component-interaction [parentData]="name"></app-component-interaction>
 
 
