--- a/src/app/components/15-component-interaction/child/child.component.html
+++ b/src/app/components/15-component-interaction/child/child.component.html
@@ -1,1 +1,8 @@
-<div>{{"Hello " + parentData }}</div>
+<!-- Case 1 -->
+<!-- <div>{{"Hello " + parentData }}</div> -->
+
+<!-- Case 2 -->
+<div>{{"Hello " + name }}</div>
+
+<button (click)="fireEvent()">Send Event</button>
+ 
