--- a/src/app/components/15-component-interaction/component-interaction.component.html
+++ b/src/app/components/15-component-interaction/component-interaction.component.html
@@ -1,2 +1,11 @@
-<app-child [parentData]="name"></app-child>
+<h1> {{ message }} </h1>
+
+<app-child  (childEvent)="message=$event" [parentData]="name"></app-child>
+
+
+
+
+
+
+
 
