http module added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,11 @@
 
 <app-ng-for-directives></app-ng-for-directives>
 
-<app-component-interaction [parentData]="name"></app-component-interaction>
+<app-component-interaction></app-component-interaction>
+
+<app-pipes></app-pipes>
+
+<employee-list></employee-list>
+<employee-details></employee-details>
 
 
