--- a/src/app/components/15-component-interaction/component-interaction.component.html
+++ b/src/app/components/15-component-interaction/component-interaction.component.html
@@ -1,4 +1,5 @@
-<h1> {{ message }} </h1>
+<h3>14 - {{ text }}</h3>
+<h4> {{ message }} </h4>
 
 <app-child  (childEvent)="message=$event" [parentData]="name"></app-child>
 
