--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,4 +30,12 @@
 <employee-list></employee-list>
 <employee-details></employee-details>
 
+<!-- Angular Routing -->
+<div>Welcome to Angular Routing</div>
+<nav>
+    <a routerLink="departments">Departments</a><br>
+    <a routerLink="employees">employees</a>
+</nav>
+<router-outlet></router-outlet>
+
 
