routes parameters added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <app-box-two></app-box-two>
 <div class="app-box-three"></div>
 
-<app-interpolation></app-interpolation>
+<!-- <app-interpolation></app-interpolation>
 
 <app-binding-property></app-binding-property>
 
@@ -28,7 +28,7 @@
 <app-pipes></app-pipes>
 
 <employee-list></employee-list>
-<employee-details></employee-details>
+<employee-details></employee-details> -->
 
 <!-- Angular Routing -->
 <div>Welcome to Angular Routing</div>
